# git-contribution-analyzer

./: .gitignore  Cargo.toml  README.md
src/: app.rs  error.rs  export.rs  git.rs  lib.rs  main.rs  ui.rs
