[package]
name = "git-contribution-analyzer"
version = "0.1.0"
edition = "2021"
description = "A TUI-based tool for analyzing git repository contributions with detailed statistics"
authors = ["Joseph NOMO <jspnomo@gmail.com>"]
license = "MIT"
repository = "https://github.com/yourusername/git-contribution-analyzer"
keywords = ["git", "tui", "statistics", "contribution"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
tui = "0.19.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
regex = "1.10"
itertools = "0.10"
glob = "0.3"